--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8.0"
+        "laravelcollective/html": "^5.8.0",
+        "torann/laravel-meta-tags": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
