--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^8.1",
         "doctrine/dbal": "^2.9",
-        "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8.0",
+        "laravel/framework": "9.*",
+        "laravel/helpers": "^1.5",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.1",
+        "laravelcollective/html": "^6.3",
         "torann/laravel-meta-tags": "^3.0"
     },
     "require-dev": {
@@ -22,8 +23,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
