--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "doctrine/dbal": "^2.9",
-        "intervention/image": "^2.4",
-        "laravel/framework": "9.*",
+        "doctrine/dbal": "^3.0",
+        "intervention/image": "^3.0",
+        "intervention/image-laravel": "^1.2",
+        "laravel/framework": "10.*",
         "laravel/helpers": "^1.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
@@ -23,8 +24,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
